# Hackathon_2

./: .gitignore  .vercelignore  CLAUDE.md  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  taskflow-dashboard.html  vercel.json
.specify/memory/: constitution.md
api/chat/: history.py  index.py
app/agent/: page.tsx
app/api/chat/: route.ts
app/api/tasks/: route.ts
app/dashboard/: page.tsx
app/tasks/: page.tsx
backend/: CLAUDE.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/agent/: runner.py
components/dashboard/: AddTaskModal.tsx  AnalyticsPanel.tsx  FilterTabs.tsx  Sidebar.tsx
components/providers/: ThemeProvider.tsx  ToastProvider.tsx
components/tasks/: TaskForm.tsx  TaskList.tsx
components/ui/: ThemeButton.tsx
frontend/: package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: api.ts  auth.ts
lib/: api.ts  auth-client.ts  auth.ts  db.ts  server-auth.ts
specs/001-todo-cli-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-todo-web-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-ai-agent-interface/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: frontend-CLAUDE.md
src/backend/: pyproject.toml
src/backend/app/: database.py  main.py
src/backend/app/agent/: prompts.py
src/backend/app/middleware/: auth.py
src/backend/app/models/: task.py
src/backend/app/routers/: chat.py
src/frontend/: package-lock.json
src/hackaton2/: __init__.py
(+67 files in other folders)
