[project]
name = "hackaton2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jannat Osmani", email = "osmanijannat@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
hackaton2 = "hackaton2:main"

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"
